FIND_PACKAGE(BoostCompute REQUIRED)
FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(Boost 1.48 REQUIRED)
SET(Boost_USE_STATIC_LIBS OFF)

INCLUDE_DIRECTORIES(${BoostCompute_INCLUDE_DIRS} ${OpenCL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})

# Collect the source
FILE(GLOB FILES "*.cpp")

FOREACH(FILE ${FILES})
    GET_FILENAME_COMPONENT(FUNC ${FILE} NAME_WE)
    GET_FILENAME_COMPONENT(FULL_DIR_NAME ${FILE} PATH)
    GET_FILENAME_COMPONENT(DIR_NAME ${FULL_DIR_NAME} NAME)

    ADD_EXECUTABLE(compute_${FUNC} ${FILE})

    TARGET_LINK_LIBRARIES(compute_${FUNC} ${OpenCL_LIBRARY} ${Boost_LIBRARIES})

    SET_TARGET_PROPERTIES(compute_${FUNC}
                          PROPERTIES
                          OUTPUT_NAME ${FUNC})
ENDFOREACH()
