FIND_PACKAGE(CUDA REQUIRED)

# A macro to build an ArrayFire example
# For most uses only FIND_PACKAGE(ArrayFire REQUIRED), ADD_EXECUTABLE(...)
# and TARGET_LINK_LIBRARIES(... ${ARRAYFIRE_LIBRARIES}) are needed
MACRO(BUILD_FUNC FUNC_NAME FUNC_SOURCE BACKEND_NAME BACKEND_LIBRARIES)

    CUDA_ADD_EXECUTABLE(${FUNC_NAME} ${FUNC_SOURCE})

    SET_TARGET_PROPERTIES(${FUNC_NAME}_${BACKEND_NAME}
        PROPERTIES
        OUTPUT_NAME ${FUNC_NAME}_${BACKEND_NAME})
ENDMACRO()

# Collect the source
FILE(GLOB FILES "*.cu")

FOREACH(FILE ${FILES})
    GET_FILENAME_COMPONENT(FUNC ${FILE} NAME_WE)
    GET_FILENAME_COMPONENT(FULL_DIR_NAME ${FILE} PATH)
    GET_FILENAME_COMPONENT(DIR_NAME ${FULL_DIR_NAME} NAME)

    SET(CUDA_NVCC_FLAGS "-std=c++11")
    CUDA_ADD_EXECUTABLE(${FUNC} ${FILE})
ENDFOREACH()
