FIND_PACKAGE(CUDA REQUIRED)

# Collect the source
FILE(GLOB FILES "*.cu")

FOREACH(FILE ${FILES})
    GET_FILENAME_COMPONENT(FUNC ${FILE} NAME_WE)
    GET_FILENAME_COMPONENT(FULL_DIR_NAME ${FILE} PATH)
    GET_FILENAME_COMPONENT(DIR_NAME ${FULL_DIR_NAME} NAME)

    SET(CUDA_NVCC_FLAGS "-std=c++11")
    CUDA_ADD_EXECUTABLE(thrust_${FUNC} ${FILE})

    SET_TARGET_PROPERTIES(thrust_${FUNC}
                          PROPERTIES
                          OUTPUT_NAME ${FUNC})
ENDFOREACH()
